--- a/src/components/Item/item.css
+++ b/src/components/Item/item.css
@@ -1,3 +1,8 @@
+.item{
+    width: 100%;
+    border-bottom: 1px solid rgb(228, 218, 218);
+    margin: 10px;
+}
 .item div {
     margin-right: 10px;
 }
