--- a/src/components/ItemList/item-list.css
+++ b/src/components/ItemList/item-list.css
@@ -3,11 +3,15 @@
     height: 300px;
     width: 100%;
     max-height: 200px;
-    overflow-y: scroll;
+    
 }
 
-.item div {
-    margin-right: 10px;
+
+.list__item {
+    width: 100%;
+    height: 200px;
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
 .body .item{
     width: 100%;
