--- a/src/components/Item/item.css
+++ b/src/components/Item/item.css
@@ -1,7 +1,12 @@
 .item{
     width: 100%;
     border-bottom: 1px solid rgb(228, 218, 218);
-    margin: 10px;
+    padding: 5px;
+}
+.item:hover{
+ background: rgb(221, 213, 213);
+ transition: all ease-in 0.4s;
+ cursor: pointer;
 }
 .item div {
     margin-right: 10px;
@@ -64,7 +69,7 @@
     color: red;
 }
 
-.complete{
+.item .complete{
     text-decoration: underline;
     color: rgb(9, 133, 170);
 }
