--- a/src/components/ItemList/item-list.css
+++ b/src/components/ItemList/item-list.css
@@ -3,15 +3,13 @@
     height: 300px;
     width: 100%;
     max-height: 200px;
-    
 }
 
 
 .list__item {
     width: 100%;
     height: 200px;
-    overflow-y: scroll;
-    overflow-x: hidden;
+    overflow-y: auto;
 }
 .body .item{
     width: 100%;
